--- a/jp/classes/econometrics2/index.html
+++ b/jp/classes/econometrics2/index.html
@@ -70,7 +70,7 @@
 
         <ul>
           <li>
-            矢内勇生.（執筆中）『Rによる統計的因果推論：効果検証のための実践的方法（仮）』
+            矢内勇生.（執筆中）『Rによる統計的因果推論：効果検証のための実践的データ分析（仮）』
           </li>
           <li>受講生には教科書の草稿を配布する。</li>
         </ul>
@@ -86,7 +86,7 @@
             >（2020年度の資料）
           </li>
           <li>
-            これは2020度の資料であり、今後更新の予定はない。受講生は必ず上の「授業の内容」を確認すること。
+            これは2020度の資料であり、今後更新する予定はない。受講生は必ず上の「授業の内容」を確認すること。
           </li>
         </ul>
 
