--- a/teaching/index.html
+++ b/teaching/index.html
@@ -37,7 +37,23 @@
       <div class="content">
         <h2>Courses</h2>
 
-        <h3>Current (Fall 2020)</h3>
+        <h3>Current (Spring 2021)</h3>
+        <ul>
+          <li>
+            <a href="/jp/classes/stat2/" target="_blank">Statistics 2</a> (u; in
+            Japanse)
+          </li>
+          <li>
+            <a href="/jp/classes/econometrics2/" target="_blank"
+              >Applied Econometrics</a
+            >
+            (u; in Japanese)
+          </li>
+        </ul>
+
+        
+        <h3>Past</h3>
+        <h4>Kochi University of Technology</h4>
         <ul>
           <li>
             <a href="/jp/classes/econometrics1/" target="_blank"
@@ -53,21 +69,7 @@
           </li>
         </ul>
 
-        <h3>Past</h3>
-        <h4>Kochi University of Technology</h4>
-        <ul>
-          <li>
-            <a href="/jp/classes/stat2/" target="_blank">Statistics 2</a> (u; in
-            Japanse)
-          </li>
-          <li>
-            <a href="/jp/classes/econometrics2/" target="_blank"
-              >Applied Econometrics</a
-            >
-            (u; in Japanese)
-          </li>
-        </ul>
-
+        
         <h4>Kobe University</h4>
         <ul>
           <li>
