--- a/jp/classes/econometrics2/index.html
+++ b/jp/classes/econometrics2/index.html
@@ -42,10 +42,9 @@
         <p>2021年度 第1クォータ　高知工科大学　経済・マネジメント学群</p>
 
         <h4>
-          <!--<a class="black" href="docs/syllabus_applied-metrics_2021-1Q.pdf"
+          <a class="black" href="docs/syllabus_applied-metrics_2021-1Q.pdf"
             >シラバス</a
-          >-->
-          シラバス（準備中）
+          >
         </h4>
 
         <br />
