--- a/jp/classes/stat2/index.html
+++ b/jp/classes/stat2/index.html
@@ -42,9 +42,8 @@
         <p>2021年度 第1クォータ 高知工科大学　経済・マネジメント学群</p>
 
         <h4>
-          <!--<a class="black" href="docs/syllabus-stat2_2020-summer.pdf"
-            >シラバス</a> -->
-          シラバス（準備中）
+          <a class="black" href="docs/syllabus-stat2_2021-1Q.pdf"
+            >シラバス</a>
         </h4>
 
         <br />
