--- a/jp/classes/econometrics2/index.html
+++ b/jp/classes/econometrics2/index.html
@@ -69,7 +69,7 @@
 
         <ul>
           <li>
-            矢内勇生.（執筆中）『Rによる統計的因果推論：効果検証のための実践的データ分析（仮）』
+            矢内勇生（執筆中）『Rによる統計的因果推論：効果検証のための実践的データ分析（仮）』
           </li>
           <li>受講生には教科書の草稿を配布する。</li>
         </ul>
