--- a/jp/classes/stat2/index.html
+++ b/jp/classes/stat2/index.html
@@ -61,7 +61,7 @@
 
         <ul>
           <li>
-            浅野正彦, 矢内勇生. 2018.『<a
+            浅野正彦, 矢内勇生 (2018)『<a
               href="https://github.com/yukiyanai/quant-methods-R"
               target="_blank"
               >Rによる計量政治学</a
@@ -73,7 +73,7 @@
 
         <ul>
           <li>
-            宋財泫, 矢内勇生. 2020.『<a
+            宋財泫, 矢内勇生 (2021)『<a
               href="http://www.jaysong.net/RBook/"
               target="_blank"
               >私たちのR：ベストプラクティスの探求</a
