--- a/jp/classes/stat2/index.html
+++ b/jp/classes/stat2/index.html
@@ -43,7 +43,7 @@
 
         <h4>
           <a class="black" href="docs/syllabus-stat2_2021-1Q.pdf"
-            >シラバス</a>
+            >シラバス</a>  (2021-03-28 更新)
         </h4>
 
         <br />
