--- a/jp/classes/econometrics2/index.html
+++ b/jp/classes/econometrics2/index.html
@@ -43,8 +43,7 @@
 
         <h4>
           <a class="black" href="docs/syllabus_applied-metrics_2021-1Q.pdf"
-            >シラバス</a
-          > (2021-03-26 更新)
+            >シラバス</a> (2021-03-28 更新)
         </h4>
 
         <br />
