--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -53,6 +53,9 @@
           <li>
             <!--<a href="slides/applied-econometrics-slides-01.pdf">講義スライド</a>-->
           </li>
+          <li>
+            <a href="R/metrics2_intro.html">この授業で実習を行う準備</a>
+          </li>
         </ul>
 
         <h3>2. セレクションバイアス</h3>
