--- a/jp/classes/econometrics2/index.html
+++ b/jp/classes/econometrics2/index.html
@@ -57,10 +57,7 @@
         <br />
 
         <h3>
-          <!--<a href="contents/" , target="_blank"
-            >授業の内容</a
-          >-->
-          授業の内容（準備中）
+          <a href="contents/" , target="_blank">授業の内容</a>
         </h3>
         <br />
 
