--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -56,6 +56,10 @@
           <li>
             <a href="R/metrics2_intro.html">この授業で実習を行う準備</a>
           </li>
+          <li>
+            <a href="R/metrics2_2021_assignment1.html">課題1</a>
+            （<strong>提出期限：2021年4月16日（金）17時</strong>）
+          </li>
         </ul>
 
         <h3>2. セレクションバイアス</h3>
