--- a/jp/classes/econometrics2/contents/R/metrics2_2021_assignment1.html
+++ b/jp/classes/econometrics2/contents/R/metrics2_2021_assignment1.html
@@ -275,7 +275,7 @@ summary {
 
 <p>以下の内容を実行する Rマークダウンファイル (拡張子が.Rmd のファイル）を作り、そのファイルを knit して作った<strong>PDFファイル</strong>をSlack のダイレクトメッセージ (DM) で担当教員に送りなさい。</p>
 <ul>
-<li><strong>提出期限は2021年4月16日（金）17時</strong>（日本時間）。</li>
+<li><strong>提出期限は2021年4月17日（土曜）正午</strong>（日本時間）。</li>
 </ul>
 <p><br></p>
 <div id="rマークダウンファイルを作る" class="section level2">
