--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -58,7 +58,7 @@
           </li>
           <li>
             <a href="R/metrics2_2021_assignment1.html">課題1</a>
-            （<strong>提出期限：2021年4月16日（金）17時</strong>）
+            （<strong>提出期限：2021年4月17日（土）正午</strong>）
           </li>
         </ul>
 
