--- a/jp/classes/stat2/index.html
+++ b/jp/classes/stat2/index.html
@@ -54,7 +54,7 @@
         </p>
         <br />
 
-        <!--<h3><a href="contents/">授業の内容</a></h3>-->
+        <h3><a href="contents/">授業の内容</a></h3>
         <br />
 
         <h4>教科書</h4>
