--- a/jp/classes/econometrics2/contents/R/metrics2_2021_assignment1.html
+++ b/jp/classes/econometrics2/contents/R/metrics2_2021_assignment1.html
@@ -284,7 +284,11 @@ summary {
 <ul>
 <li><strong>metrics2_hw01_YourName.Rmd</strong></li>
 </ul>
-<p>として保存しなさい。ただし、<strong>YourName</strong> の部分は自分の氏名に置き換えること。 <strong>異なるファイル名を使ったものは減点する</strong>。 ファイル名の例： - Rマークダウン：<code>metrics2_hw01_YanaiYuki.Rmd</code> - 提出するPDF：<code>metrics2_hw01_YanaiYuki.pdf</code></p>
+<p>として保存しなさい。ただし、<strong>YourName</strong> の部分は自分の氏名に置き換えること。 <strong>異なるファイル名を使ったものは減点する</strong>。 ファイル名の例：</p>
+<ul>
+<li>Rマークダウン：<code>metrics2_hw01_YanaiYuki.Rmd</code></li>
+<li>提出するPDF：<code>metrics2_hw01_YanaiYuki.pdf</code></li>
+</ul>
 <p><br></p>
 </div>
 <div id="ヘッダ部分に必要な情報を書く" class="section level2">
