--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -47,6 +47,10 @@
         <br />
 
         <h2>授業の内容</h2>
+        
+        <h3>講義スライド</h3>
+        
+        <p>講義で使用するスライドは <a href="https://lms.kochi-tech.ac.jp/course/view.php?id=1271" target="_blank">KUTLMS</a> にアップロードする。</p>
 
         <h3>1. イントロダクション</h3>
         <ul>
@@ -65,11 +69,11 @@
         <h3>2. セレクションバイアス</h3>
         <ul>
           <li>
-            <!--<a href="slides/.pdf">講義スライド</a>-->
+             <a href="R/selection-bias.html">セレクションバイアスのシミュレーション</a>
           </li>
         </ul>
 
-        <h3>3. RCT（ランダム化比較試験）</h3>
+        <h3>3. 無作為化比較試験 (RCT)</h3>
         <ul>
           <li>
             <!--<a href="slides/.pdf">講義スライド</a>-->
