--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -76,7 +76,7 @@
         <h3>3. 無作為化比較試験 (RCT)</h3>
         <ul>
           <li>
-            <!--<a href="slides/.pdf">講義スライド</a>-->
+             <a href="R/RCT.html">RCTのシミュレーション</a>
           </li>
         </ul>
 
