update installing R on win

--- a/cv/index.html
+++ b/cv/index.html
@@ -129,6 +129,7 @@
 
         <h3>Grants and Awards</h3>
         <ul>
+          <li>The Teacher of the Year (for the 2020-2021 academic year), Kochi University of Technology</li>
           <li>
             Japan Society for the Promotion of Science, Grant-in-Aid for
             Scientific Research (KAKEN): Nos. 22830099 (2010-2012), 25780102
