--- a/jp/publications/index.html
+++ b/jp/publications/index.html
@@ -412,6 +412,7 @@
         <h3>賞・研究費・奨学金</h3>
 
         <ul>
+          <li>高知工科大学, The Teacher of the Year（2020年度）</li>
           <li>
             科学研究費補助金・基盤B, No.19H01447（2019-22年度）[研究代表者]
           </li>
