--- a/jp/resources/index.html
+++ b/jp/resources/index.html
@@ -43,6 +43,7 @@
       <li><a href="docs/install-R_windows.pdf" target="_blank">Windows 編</a> （PDF, 6.2MB）</li>
       <p> Windows編で、引用符があるコードをコピペすると動かないという不具合があったので修正しました。修正した頁は 79, 80, 98, 99, 101, 102です。指摘してくれた日道さんと矢吹さんに感謝します。（2020-07-05 追記）</p>
       <p>Windows編の p.72 を書き換えました（インストール場所を C ドライブ直下に変更）。（2020-07-08 追記）</p>
+      <p>Windows編のp.98 の補足として p.99 を追加しました。土井翔平さんに感謝。（2021-04-16 追記）</p>
       <p><b>大学の授業でRを使う方へ：インストールについてメールで質問されても答えられません。質問は授業の担当教員にしてください。</b>資料を読んでもわからないことがあれば、<a href="https://github.com/tokyor/r-wakalang" target="_blank">r-wakalang</a> の初心者チャンネル (#r_beginners) で質問することをお勧めします。</p>
     </ul>
   
