--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -73,7 +73,7 @@
           </li>
         </ul>
 
-        <h3>3. 無作為化比較試験 (RCT)</h3>
+        <h3>3. ランダム化比較試験 (RCT)</h3>
         <ul>
           <li>
              <a href="R/RCT.html">RCTのシミュレーション</a>
@@ -83,7 +83,10 @@
         <h3>4. 回帰分析</h3>
         <ul>
           <li>
-            <!--<a href="slides/.pdf">講義スライド</a>-->
+             <a href="R/regression.html">回帰分析のシミュレーションとDAG</a>（提出が必要な課題あり)
+          </li>
+          <li>
+            <strong>課題の提出期限：2021年4月28日（水）午後6時</strong>
           </li>
         </ul>
 
