--- a/jp/classes/stat2/contents/R/stat2_2021_hw01.html
+++ b/jp/classes/stat2/contents/R/stat2_2021_hw01.html
@@ -201,10 +201,11 @@ summary {
 </ul></li>
 <li>ファイル名は、<strong>stat2_hw1_studentID.pdf</strong> とすること。
 <ul>
-<li>元となる R Markdown のファイル名を stat2_hw1_studentID.<strong>Rmd</strong> としておけば良い。</li>
+<li>元となる R Markdown のファイル名を stat2_hw1_studentID.<strong>Rmd</strong> としておけばよい。</li>
 <li>ただし、<strong>studentID は自分の学籍番号に置き換える</strong>こと。</li>
 <li>たとえば、学籍番号が 123456 なら、stat2_hw1_123456.pdf にする。</li>
 </ul></li>
+<li>Slack を匿名・ニックネームで利用している場合は、YAML ヘッダの author を「本名（学籍番号, Slac で利用している名前）」にすること。</li>
 <li><a href="https://lms.kochi-tech.ac.jp/course/view.php?id=1277">KUTLMS</a> の「課題の提出場所」（トピック 1 の上にある）の「課題1」にファイルを提出する。</li>
 <li><strong>提出期限：2021年4月28日（水）正午</strong>（日本時間）</li>
 </ul>
