--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -64,7 +64,7 @@
     <ul>
       <li><a href="slides/stat2_slides_topic02_pub.pdf">講義スライド (PDF)</a><li>
       <li><a href="R/introduction-to-R.html">R入門</a></li>
-      <!--<li><a href="R/birthday.html">誕生日問題</a></li>-->
+      <li><a href="R/birthday.html">誕生日問題</a></li>
     </ul>
     
         
