--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -86,7 +86,7 @@
              <a href="R/regression.html">回帰分析のシミュレーションとDAG</a>（提出が必要な課題あり)
           </li>
           <li>
-            <strong>課題の提出期限：2021年4月28日（水）午後6時</strong>
+            <strong>課題の提出期限：2021年4月 <s>28日（水）</s> 29日（木）午後6時</strong>
           </li>
         </ul>
 
