--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -81,9 +81,17 @@
       <li><a href="R/r-markdown.html">Rマークダウンの使い方</a> (HTML)
         <ul>
           <li></li>
-          <li>「Rマークダウンの使い方」のRmdファイル (<a href="R/r-markdown.Rmd">r-markdown.Rmd</a>)</li>
+          <li>「Rマークダウンの使い方」のRmdファイル (<a href="https://drive.google.com/file/d/1-KMpN1Sufm1LgLDiQneuVKECi9wjf02v/view?usp=sharing">r-markdown.Rmd</a>)</li>
           <li>「Rマークダウンの使い方」のPDFファイル (<a href="R/r-markdown.PDF">r-markdown.pdf</a>)</li>
           <li>スタイルシート (<a href="R/my-markdown.css">my-markdown.css</a>)</li>
+        </ul>
+      </li>
+      <li> Rマークダウン用の設定とテスト
+        <ul>
+          <li></li>
+          <li><a href="R/setting-KUT.html">情報演習室のパソコンでRStudioを使う方法</a> </li>
+          <li><a href="https://drive.google.com/file/d/1-Huk1P_6cEPplvV5OOihNCRm2wnl3zLZ/view?usp=sharing">テスト用のRマークダウンファイル</a> </li>
+          <li><a href="https://drive.google.com/file/d/1-O5BsMdd_Q7gqCZVrHkXe8mi6IGERUor/view?usp=sharing">Rマークダウンファイルのテンプレート</a> </li>
         </ul>
       </li>
       <li><a href="R/stat2_2021_hw01.html">課題1</a>　<strong>提出期限：2021年 <s>4月28日（水）</s> 5月1日（土）正午</strong>（日本時間）</li>
