--- a/research/abstracts/bicameralism-parliamentarism.html
+++ b/research/abstracts/bicameralism-parliamentarism.html
@@ -16,7 +16,7 @@
         <h1>Yuki Yanai</h1>
         <p>
           <!-- InstanceBeginEditable name="header" -->
-          <a class="white-red" href="http://yukiyanai.com/">home</a>
+          <a class="white-red"href="https://yukiyanai.github.io/">home</a>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <a class="white-red" href="/cv/">cv</a>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
