--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Yuki Yanai</h1>
         <p>
           <!-- InstanceBeginEditable name="header" -->
-          <a class="current" href="http://yukiyanai.com/">home</a>
+          <a class="current" href="https://yukiyanai.github.io/">home</a>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <a class="white-red" href="/cv/" target="_top">cv</a>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
