--- a/jp/classes/stat2/contents/R/setting-KUT.html
+++ b/jp/classes/stat2/contents/R/setting-KUT.html
@@ -240,9 +240,11 @@ usethis::edit_r_profile()</code></pre>
 
 ## suppress annoying significance stars
 options(show.signif.stars = FALSE)
-</code></pre>
+
+## use spaces around &quot;=&quot; inside functions
+utils::rc.options(funarg.suffix = &quot; = &quot;)</code></pre>
 <p>上の内容を貼り付けたら、最後に1行空行（何も書かない行）を挿入する（最後に1回改行すればOK）。</p>
-<p>次に <code>xxxx</code> の部分を授業で案内する番号に書き換える（3つとも同じ番号）。</p>
+<p>次に <code>xxxx</code> の部分を授業で案内する番号に書き換える（3箇所とも同じ番号）。</p>
 <p>書き換えが完了したら<code>ctrl + S</code> でファイルを保存し、そのファイルを閉じる。</p>
 <p>その後、RStudioのメニュー（上部）で [Session] -&gt; [Restart R] を選んでRを再起動する。</p>
 <p>この作業は1度実行すれば次回から行う必要はない。（設定を変えたいときは .Rprofile を書き換える。）</p>
