--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -93,8 +93,10 @@
         <h3>5. 傾向スコア</h3>
         <ul>
           <li>
-            <!--<a href="slides/.pdf">講義スライド</a>-->
+             <a href="R/propensity-score.html">傾向スコア</a>（提出が必要な課題あり)
           </li>
+          <li>
+            <strong>課題の提出期限：2021年5月17日（月）午前10時</strong>
         </ul>
 
         <h3>6. パネルデータ分析</h3>
