--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -110,7 +110,7 @@
     <ul>
       <li><a href="slides/stat2_slides_topic06_pub.pdf">講義スライド (PDF)</a></li>
       <li><a href="R/rng-n-clt.html">乱数生成と中心極限定理</a></li>
-      <li><a href="R/stat2_2021_hw02.html">課題2</a>　<strong>提出期限：2021年5月17日（火）午後5時</strong>（日本時間）</li>
+      <li><a href="R/stat2_2021_hw02.html">課題2</a>　<strong>提出期限：2021年5月<s>17</s> 18日（火）午後5時</strong>（日本時間）</li>
     </ul>
         
     
