--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -109,7 +109,7 @@
         <h3>7. パネルデータ分析</h3>
         <ul>
           <li>
-            <!--<a href="slides/.pdf">講義スライド</a>-->
+            <a href="R/difference-in-differences.html">差分の差分法</a>（提出が必要な課題 [選択制] あり)
           </li>
         </ul>
 
