--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -133,7 +133,7 @@
         <h3>8. 回帰不連続デザイン (RDD)</h3>
         <ul>
           <li>
-            <a href="R/regression-discontinuity.html">差分の差分法</a
+            <a href="R/regression-discontinuity.html">回帰不連続デザイン</a
             >（提出が必要な課題 [選択制] あり)
           </li>
         </ul>
