--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -116,9 +116,9 @@
     
     <h3>7. 統計的推定と仮説検定の基礎</h3>
     <ul>
-      <!--<li><a href="slides/stat2_slides_topic07_pub.pdf">講義スライド (PDF)</a></li>-->
+      <li><a href="slides/stat2_slides_topic07_pub.pdf">講義スライド (PDF)</a></li>
       <li><a href="R/introduction-to-inference.html">統計的推定と仮説検定の基礎</a></li>
-    <!--    <li><a href="R/pop-n-samples.html">母集団と標本をシミュレーションで理解する</a></li> -->
+      <li><a href="R/pop-n-samples.html">母集団と標本をシミュレーションで理解する</a></li>
     </ul>
 
 <!--
