--- a/jp/classes/stat2/contents/R/estimating-pop-mean.html
+++ b/jp/classes/stat2/contents/R/estimating-pop-mean.html
@@ -192,7 +192,7 @@ summary {
 <h1 class="title toc-ignore">統計学2</h1>
 <h3 class="subtitle">母平均を推定する</h3>
 <h4 class="author">矢内　勇生</h4>
-<h4 class="date">2018-05-14（改訂: 2019-05-14, 2020-08-29, 2021-05-19）</h4>
+<h4 class="date">2018-05-14（改訂: 2019-05-14, 2020-08-29, 2021-05-19, 2021-05-26）</h4>
 
 </div>
 
@@ -462,8 +462,8 @@ plot(h_est)</code></pre>
 <pre><code>## [1] 9481</code></pre>
 <p>である。つまり、1万個の95％信頼区間のうち、母数を捉えることができた区間は 9481個ある。言い換えると、標本抽出と区間推定を繰り返し行うと、得られた95%信頼区間の94.8%（約95％）は、母数を区間内に捉えられる。これが、信頼区間のパーセンテージの意味である。</p>
 <p>理解を深めるために、信頼区間を図示してみよう。 シミュレーションで得た1万個の信頼区間から、50個だけ無作為に選び、選んだ50個の信頼区間を図示してみよう。</p>
-<p>まず、無作為に50個の結果を選ぶ。データフレームから無作為に行を選びたいときは、<strong>dplyr</strong> パッケージ（<strong>tidyverse</strong> に含まれる）の <code>sample_n()</code> を使う。</p>
-<pre class="r"><code>rdm_50 &lt;- sample_n(df_sim, size = 50)</code></pre>
+<p>まず、無作為に50個の結果を選ぶ。データフレームから無作為に行を選びたいときは、<strong>dplyr</strong> パッケージ（<strong>tidyverse</strong> に含まれる）の <code>slice_sample()</code> を使う。</p>
+<pre class="r"><code>rdm_50 &lt;- slice_sample(df_sim, n = 50)</code></pre>
 <p>選ばれた信頼区間を図示する。</p>
 <pre class="r"><code>ci1 &lt;- ggplot(rdm_50, aes(x = as.factor(id), y = est, ymin = lb, ymax = ub)) +
   geom_pointrange() +
