--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -137,7 +137,7 @@
     
     <h3>9. <i>t</i> 分布と母平均の推定</h3>
     <ul>
-      <!--<li><a href="slides/stat2_slides_topic09_pub.pdf">講義スライド (PDF)</a></li>-->
+      <li><a href="slides/stat2_slides_topic09_pub.pdf">講義スライド [公開用]  (PDF)</a></li>
       <li><a href="R/t-distribution.html"><i>t</i> 分布を利用した母平均の推定</a></li>
     </ul>  
   
@@ -145,7 +145,7 @@
 
     <h3>10. 平均値の比較</h3>
      <ul>
-     <!-- <li><a href="slides/stat2_slides_topic10_pub.pdf">講義スライド [公開用] (PDF)</a></li>-->
+     <li><a href="slides/stat2_slides_topic10_pub.pdf">講義スライド [公開用] (PDF)</a></li>-->
       <li><a href="R/mean-comparison.html">統計的検定と平均値の比較</a></li>
     </ul>
     
