--- a/cv/index.html
+++ b/cv/index.html
@@ -45,18 +45,21 @@
         <h3>Current Position</h3>
         <ul>
           <li>
-            Assistant Professor, School of Economics &amp; Management,
+            Associate Professor, School of Economics &amp; Management,
             <a
               href="https://www.kochi-tech.ac.jp/english/index.html"
               target="_blank"
               >Kochi University of Technology</a
             >
-            (Apr 2018 - present)
+            (Aug 2021 - present)
           </li>
         </ul>
 
         <h3>Previous Positions</h3>
         <ul>
+          <li>Assistant Professor, School of Economics &amp; Management,
+            Kochi University of Technology (Apr 2018 - Jul 2021)
+          </li>
           <li>
             Assistant Professor, Graduate School of International Relations,
             International University of Japan (Sep 2016 - Mar 2018)
