--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="content">
         <h2>Welcome to YUKI YANAI's Website</h2>
         <p>
-          I am an assistant professor in the School of Economics &amp;
+          I am an associate professor in the School of Economics &amp;
           Management at
           <a
             href="https://www.kochi-tech.ac.jp/english/index.html"
