--- a/jp/cv/index.html
+++ b/jp/cv/index.html
@@ -108,6 +108,11 @@
             <td align="left">講師</td>
           </tr>
           <tr>
+            <td align="left">&nbsp;&nbsp;2021年 8月</td>
+            <td align="center">同</td>
+            <td align="left">准教授</td>
+          </tr>
+          <tr>
             <td align="left"></td>
             <td align="center">現在に至る</td>
             <td align="left"></td>
