--- a/jp/index.html
+++ b/jp/index.html
@@ -45,7 +45,7 @@
           <a href="https://www.kochi-tech.ac.jp/" target="_blank"
             >高知工科大学</a
           >
-          経済・マネジメント学群 講師
+          経済・マネジメント学群 准教授
         </h3>
 
         <h4>
