--- a/jp/resources/index.html
+++ b/jp/resources/index.html
@@ -46,6 +46,11 @@
       <p>Windows編のp.98 の補足として p.99 を追加しました。土井翔平さんに感謝。（2021-04-16 追記）</p>
       <p><b>大学の授業でRを使う方へ：インストールについてメールで質問されても答えられません。質問は授業の担当教員にしてください。</b>資料を読んでもわからないことがあれば、<a href="https://github.com/tokyor/r-wakalang" target="_blank">r-wakalang</a> の初心者チャンネル (#r_beginners) で質問することをお勧めします。</p>
     </ul>
+
+  <h2>R パッケージ</h2>
+    <ul>
+      <li><a href="https://yukiyanai.github.io/rgamer/" target="_blank">rgamer</a>: ゲーム理論を学ぶためのRパッケージ</li>
+    </ul>
   
   <h2>Beamer用テーマ</h2>
     <h3>高知工科大学用テーマ</h3>
