--- a/resources/index.html
+++ b/resources/index.html
@@ -37,6 +37,15 @@
       <div class="content">
         <h2>Resources</h2>
 
+        <h3>R Packages</h3>
+        <ul>
+          <li>
+            <a href="https://yukiyanai.github.io/rgamer/" target="_blank"
+              >rgamer</a
+            >: Learn game theory using R
+          </li>
+        </ul>
+
         <h3>Beamer themes</h3>
 
         <h4>Kochi University of Technology</h4>
