--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -42,7 +42,7 @@
       <!-- InstanceBeginEditable name="content" -->
       <div class="content">
         <h1>計量経済学</h1>
-        <p>2020年度 第3クォータ　高知工科大学　経済・マネジメント学群</p>
+        <p>2021年度 第3クォータ　高知工科大学　経済・マネジメント学群</p>
         <p><a href="../">授業概要</a></p>
         <br />
 
@@ -57,35 +57,20 @@
         <h3>1. イントロダクション</h3>
         <ul>
           <li>
-            <a href="slides/econometrics_slides_01.pdf">講義スライド (PDF)</a>
-          </li>
-          <!--<li><a href="http://yukiyanai.github.io/jp/classes/stat2/contents/R/installing-R.html" target="_blank">RとRStudioのインストール</a></li>-->
-        </ul>
-
-        <h3>2. RとRStudioの基本操作（復習）</h3>
-        <ul>
-          <li>
-            <a
+            <!--<a href="slides/econometrics_slides_01.pdf">講義スライド (PDF)</a>-->
+            <li>R と RStudio については <a
               href="http://yukiyanai.github.io/jp/classes/stat2/contents/"
               target="_blank"
               >統計学2のページ</a
-            >を参照
+            > を参照</li>
           </li>
-        </ul>
+         </ul>
 
-        <h3>3. 二変数の関係</h3>
+        <!--
+        <h3>2. 二つの変数の関係を理解する</h3>
         <ul>
-          <li>
-            <a href="slides/econometrics_slides_03.pdf">講義スライド (PDF)</a>
-          </li>
+          <a href="slides/econometrics_slides_02.pdf">講義スライド (PDF)</a>
           <li><a href="R/bivariate-analysis.html">二変数の関係</a></li>
-        </ul>
-
-        <h3>4. 回帰分析の基礎</h3>
-        <ul>
-          <li>
-            <a href="slides/econometrics_slides_04.pdf">講義スライド (PDF)</a>
-          </li>
           <li><a href="R/regression-intro.html">回帰分析の基礎</a></li>
           <li>
             <a href="assignments/econometrics_2020_hw01.html">課題1</a
@@ -93,55 +78,47 @@
           </li>
         </ul>
 
-        <h3>5. 因果推論 I</h3>
-        <ul>
-          <li>
-            <a href="slides/econometrics_slides_05.pdf">講義スライド (PDF)</a>
-          </li>
-        </ul>
+        --> 
 
-        <h3>6. 因果推論 II</h3>
+        <!--
+        <h3>3. 因果推論</h3>
         <ul>
           <li>
-            <a href="slides/econometrics_slides_06.pdf">講義スライド (PDF)</a>
+            <a href="slides/econometrics_slides_03.pdf">講義スライド (PDF)</a>
           </li>
           <li>
             <a href="assignments/econometrics_2020_hw02.html">課題2</a
             >（<b>提出期限：10月29日の授業開始時</b>）
           </li>
         </ul>
+        -->
 
-        <h3>7. データの収集・クリーニング</h3>
+        <!--
+        <h3>4. データの収集・クリーニング</h3>
         <ul>
           <li>
-            <a href="slides/econometrics_slides_07.pdf">講義スライド (PDF)</a>
+            <a href="slides/econometrics_slides_04.pdf">講義スライド (PDF)</a>
           </li>
           <li><a href="R/data-handling.html">Rによるデータ操作</a></li>
         </ul>
 
-        <h3>8. 回帰分析による統計的推測 I: 仮説を立てる</h3>
+        <h3>5. 回帰分析による統計的推測 I: 仮説を立てる</h3>
         <ul>
           <li>
-            <a href="slides/econometrics_slides_08.pdf">講義スライド (PDF)</a>
+            <a href="slides/econometrics_slides_05.pdf">講義スライド (PDF)</a>
           </li>
         </ul>
 
-        <h3>9. 回帰分析による統計的推測 II: 仮説を検証する (1)</h3>
+        -->
+
+        <!--
+        <h3>6. 回帰分析による統計的推測 II: 仮説を検証する (1)</h3>
         <ul>
           <li>
-            <a href="slides/econometrics_slides_09.pdf">講義スライド (PDF)</a>
+            <a href="slides/econometrics_slides_06.pdf">講義スライド (PDF)</a>
           </li>
           <li>
             <a href="R/regression-estimation.html">回帰分析による統計的推定</a>
-          </li>
-        </ul>
-
-        <h3>10. 回帰分析による統計的推測 III: 仮説を検証する (2)</h3>
-        <ul>
-          <li>
-            <a href="slides/econometrics_slides_10.pdf">講義スライド (PDF)</a>
-          </li>
-          <li>
             <a href="R/regression-test-inference.html"
               >回帰分析による統計的検定と推定</a
             >
@@ -151,47 +128,61 @@
             >（<b>提出期限：11月12日の授業開始時</b>）
           </li>
         </ul>
+        -->
 
-        <h3>11. 回帰分析の応用 I</h3>
+        <!--
+        <h3>7. 回帰分析の応用 I</h3>
         <ul>
           <li>
-            <a href="slides/econometrics_slides_11.pdf">講義スライド (PDF)</a>
+            <a href="slides/econometrics_slides_07.pdf">講義スライド (PDF)</a>
           </li>
           <li><a href="R/multiple-regression.html">回帰分析の応用 (1)</a></li>
-        </ul>
-
-        <h3>12. 回帰分析の応用 II</h3>
-        <ul>
-          <li>
-            <a href="slides/econometrics_slides_12.pdf">講義スライド (PDF)</a>
-          </li>
           <li><a href="R/linear-regression.html">回帰分析の応用 (2)</a></li>
         </ul>
+        -->
 
-        <h3>13. 分析結果をまとめる</h3>
+        <!--
+        <h3>8. 分析結果を効果的に伝える方法</h3>
         <ul>
           <li>
-            <a href="slides/econometrics_slides_13.pdf">講義スライド (PDF)</a>
+            <a href="slides/econometrics_slides_08.pdf">講義スライド (PDF)</a>
           </li>
           <li><a href="R/regression-reports.html">分析結果の提示法</a></li>
         </ul>
+        -->
 
-        <h3>13. 回帰分析で交差項を利用する</h3>
+        <!--
+        <h3>9. 交差項の利用</h3>
         <ul>
           <li>
-            <a href="slides/econometrics_slides_14.pdf">講義スライド (PDF)</a>
+            <a href="slides/econometrics_slides_09.pdf">講義スライド (PDF)</a>
           </li>
           <li><a href="R/interaction.html">交差項の利用</a></li>
         </ul>
+        -->
 
-        <h3>
-          <a href="assignments/metrics2020_final.html"
-            >最終課題とデータ可視化発表会</a
-          >
-        </h3>
+        <!--
+        <h3>10. 多重比較</h3>
         <ul>
+          <li>
+            <a href="slides/econometrics_slides_10.pdf">講義スライド (PDF)</a>
+          </li>
+        </ul>
+        -->
+
+
+        <!--
+        <h3>データ可視化発表会</h3>
+        <ul>
+          <li><a href="assignments/metrics2021_visualization.html">データ可視化発表会について</a></li>
           <li><a href="R/visualization-tips.html">データ可視化のTips</a></li>
         </ul>
+
+        <h3>最終課題</h3>
+        <ul>
+          <li><a href="assignments/metrics2021_final.html">期末レポートについて</a></li>
+        </ul>
+        -->
 
         <!-- end .content -->
       </div>
