--- a/jp/classes/info3/index.html
+++ b/jp/classes/info3/index.html
@@ -39,63 +39,20 @@
       <div class="content">
         <h2>情報科学 3</h2>
 
-        <p>2020年度 第3クォータ　高知工科大学　経済・マネジメント学群</p>
+        <p>2021年度 第3クォータ　高知工科大学　経済・マネジメント学群</p>
 
-        <!--<h4><a class="black" href="docs/syllabus-infoscience3_2019-3Q.pdf">シラバス（PDF; 要パスワード）</a></h4>-->
-        <h4>シラバスは KUTLMS に掲載</h4>
-
-        <br />
-
-        <h3>Pythonのインストール</h3>
-        <ul>
-          <li>
-            <a href="python/install-python3.html" target="_blank"
-              >Windowsにインストールする方法</a
-            >
-          </li>
-        </ul>
-
-        <h3>授業に役立つリンク</h3>
-        <ul>
-          <li>
-            <a href="https://colab.research.google.com/" target="_blank"
-              >Google Colab</a
-            >
-          </li>
-          <li>
-            <a href="https://py3.codeskulptor.org/" target="_blank"
-              >CodeSkulptor3</a
-            >（ウェブ上でPython 3プログラムを実行できる）
-          </li>
-          <li>
-            Dive into Python 3（<a
-              href="http://www.diveintopython3.net/"
-              target="_blank"
-              >英語版</a
-            >;
-            <a href="http://diveintopython3-ja.rdy.jp/" target="_blank"
-              >日本語版</a
-            >）
-          </li>
-          <li>
-            <a href="https://scratch-howto.com/" target="_blank"
-              >スクラッチプログラミング入門</a
-            >
-          </li>
-        </ul>
+        <h4>
+          <a class="black" href="docs/syllabus_infosci3_2021-3Q.pdf"
+            >シラバス</a
+          >
+        </h4>
 
         <br />
 
         <h4>教科書</h4>
 
         <ul>
-          <li>
-            辻真吾. 2018.『<a
-              href="https://gihyo.jp/book/2018/978-4-7741-9643-5"
-              target="_blank"
-              >Pythonスタートブック [増補改訂版]</a
-            >』技術評論社.
-          </li>
+          <li>教科書は指定しない。</li>
         </ul>
 
         <!-- end .content -->
