--- a/jp/classes/info3/index.html
+++ b/jp/classes/info3/index.html
@@ -46,7 +46,22 @@
             >シラバス</a
           >
         </h4>
+        <br />
 
+        <h3>授業の概要</h3>
+        <p>
+          この講義では機械学習(machine learning, マシンラーニング)
+          の基礎を学ぶ。現代はビッグデータの時代と呼ばれ、データ解析にAI（人工知能）が活用されている。コンピュータにデータを入力すると、AI
+          がデータに隠されたパタンや特徴を見つけ出し、予測や分類を行ってくれる。たとえば、金融分野では企業・個人の信用評価を、マーケティング分野では消費者の好みに応じた商品レコメンドなどを、AIが半ば自動的に行ってくれる。
+          これらの例で使われるAIとは、高度な機械学習や深層学習のことである。ビッグデータ時代のデータサイエンスは、機械学習によって支えられている。
+        </p>
+        <p>
+          そこでこの講義では、現代のデータサイエンスに欠かせない機械学習の基本的な仕組みを学び、R
+          を使って機械学習を実行する方法を身につける。近年では高校の授業にも機械学習・データサイエンスの内容が取り入れられており、高校数学の教員を目指す学生にとっても、機械学習の基礎を理解することは有益である。
+        </p>
+        <br />
+
+        <h3><a href="contents/">授業の内容</a></h3>
         <br />
 
         <h4>教科書</h4>
