--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -57,7 +57,7 @@
         <h3>1. イントロダクション</h3>
         <ul>
           <li>
-            <!--<a href="slides/econometrics_slides_01.pdf">講義スライド (PDF)</a>-->
+            <a href="slides/econometrics_slides_01.pdf">講義スライド (PDF)</a>
             <li>R と RStudio については <a
               href="http://yukiyanai.github.io/jp/classes/stat2/contents/"
               target="_blank"
@@ -66,19 +66,16 @@
           </li>
          </ul>
 
-        <!--
         <h3>2. 二つの変数の関係を理解する</h3>
         <ul>
-          <a href="slides/econometrics_slides_02.pdf">講義スライド (PDF)</a>
+          <!-- <a href="slides/econometrics_slides_02.pdf">講義スライド (PDF)</a> -->
           <li><a href="R/bivariate-analysis.html">二変数の関係</a></li>
           <li><a href="R/regression-intro.html">回帰分析の基礎</a></li>
           <li>
-            <a href="assignments/econometrics_2020_hw01.html">課題1</a
-            >（<b>提出期限：10月22日の授業開始時</b>）
+            <a href="assignments/econometrics_2021_hw01.html">課題1</a>
           </li>
         </ul>
 
-        --> 
 
         <!--
         <h3>3. 因果推論</h3>
