--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -68,7 +68,7 @@
 
         <h3>2. 二つの変数の関係を理解する</h3>
         <ul>
-          <!-- <a href="slides/econometrics_slides_02.pdf">講義スライド (PDF)</a> -->
+          <li><a href="slides/econometrics_slides_02.pdf">講義スライド (PDF)</a></li>
           <li><a href="R/bivariate-analysis.html">二変数の関係</a></li>
           <li><a href="R/regression-intro.html">回帰分析の基礎</a></li>
           <li>
@@ -76,19 +76,15 @@
           </li>
         </ul>
 
-
-        <!--
-        <h3>3. 因果推論</h3>
+      <h3>3. 因果推論</h3>
         <ul>
           <li>
             <a href="slides/econometrics_slides_03.pdf">講義スライド (PDF)</a>
           </li>
-          <li>
-            <a href="assignments/econometrics_2020_hw02.html">課題2</a
-            >（<b>提出期限：10月29日の授業開始時</b>）
+          <li> 
+            <a href="assignments/econometrics_2021_hw02.html">課題2</a>
           </li>
         </ul>
-        -->
 
         <!--
         <h3>4. データの収集・クリーニング</h3>
