update info-science 3

--- a/jp/classes/info3/contents/index.html
+++ b/jp/classes/info3/contents/index.html
@@ -56,6 +56,16 @@
           </li>
         </ul>
 
+        <h3>2. 学習モデル</h3>
+
+        <h3>3. 最小二乗学習</h3>
+        <ul>
+          <!--<li><a href="slides/info3_lec01.pdf">講義スライド</a></li> -->
+          <li>
+            <a href="R/least_squares.html">Rによる最小二乗学習</a>
+          </li>
+        </ul>
+
         <!-- end .content -->
       </div>
       <!-- InstanceEndEditable -->
