--- a/jp/classes/info3/contents/index.html
+++ b/jp/classes/info3/contents/index.html
@@ -64,6 +64,9 @@
           <li>
             <a href="R/least_squares.html">Rによる最小二乗学習</a>
           </li>
+          <li>
+            <a href="R/overfitting.html">過剰適合</a>
+          </li>
         </ul>
 
         <!-- end .content -->
