--- a/jp/classes/info3/contents/index.html
+++ b/jp/classes/info3/contents/index.html
@@ -67,6 +67,19 @@
           <li>
             <a href="R/overfitting.html">過剰適合</a>
           </li>
+          <li>
+            <a href="R/regularized_regression.html"
+              >制約付き最小二乗学習（正則化回帰）</a
+            >
+          </li>
+        </ul>
+
+        <h3>課題</h3>
+        <ul>
+          <li>
+            <a href="R/info3_2021_hw01.html">課題1</a>（提出期限：10月25日 [月]
+            正午）
+          </li>
         </ul>
 
         <!-- end .content -->
