--- a/jp/classes/econometrics2/index.html
+++ b/jp/classes/econometrics2/index.html
@@ -31,7 +31,9 @@
           <a class="white-red" href="/jp/resources/">その他</a>
           <!-- InstanceEndEditable -->
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
+          <a class="white-red fltrt" href="https://yukiyanai.github.io/"
+            >English</a
+          >
         </p>
         <!-- end .header -->
       </div>
@@ -43,7 +45,9 @@
 
         <h4>
           <a class="black" href="docs/syllabus_applied-metrics_2021-1Q.pdf"
-            >シラバス</a> (2021-03-30 更新)
+            >シラバス</a
+          >
+          (2021-03-30 更新)
         </h4>
 
         <br />
