--- a/jp/classes/rm1_2014/index.html
+++ b/jp/classes/rm1_2014/index.html
@@ -31,7 +31,9 @@
           <a class="white-red" href="/~yyanai/jp/resources/">その他</a>
           <!-- InstanceEndEditable -->
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
+          <a class="white-red fltrt" href="https://yukiyanai.github.io/"
+            >English</a
+          >
         </p>
         <!-- end .header -->
       </div>
