--- a/jp/classes/stat2/index.html
+++ b/jp/classes/stat2/index.html
@@ -31,7 +31,9 @@
           <a class="white-red" href="/jp/resources/">その他</a>
           <!-- InstanceEndEditable -->
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
+          <a class="white-red fltrt" href="https://yukiyanai.github.io/"
+            >English</a
+          >
         </p>
         <!-- end .header -->
       </div>
@@ -42,8 +44,8 @@
         <p>2021年度 第1クォータ 高知工科大学　経済・マネジメント学群</p>
 
         <h4>
-          <a class="black" href="docs/syllabus-stat2_2021-1Q.pdf"
-            >シラバス</a>  (2021-03-28 更新)
+          <a class="black" href="docs/syllabus-stat2_2021-1Q.pdf">シラバス</a>
+          (2021-03-28 更新)
         </h4>
 
         <br />
