--- a/jp/index.html
+++ b/jp/index.html
@@ -31,7 +31,10 @@
           <a class="white-red" href="/jp/resources/" target="_top">その他</a>
           <!-- InstanceEndEditable -->
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="white-red fltrt" href="http://yukiyanai.com/" target="_top"
+          <a
+            class="white-red fltrt"
+            href="https://yukiyanai.github.io/"
+            target="_top"
             >English</a
           >
         </p>
