--- a/jp/classes/rm2/contents/index.html
+++ b/jp/classes/rm2/contents/index.html
@@ -35,7 +35,7 @@
           <a class="white-red" href="/jp/resources/">その他</a>
           <!-- InstanceEndEditable -->
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="white-red fltrt" href="http://www.yukiyanai.com/"
+          <a class="white-red fltrt" href="https://yukiyanai.github.io/"
             >English</a
           >
         </p>
