--- a/jp/resources/index.html
+++ b/jp/resources/index.html
@@ -30,7 +30,7 @@
   <a class="current" href="/jp/resources/">その他</a>
   <!-- InstanceEndEditable -->
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
+  <a class="white-red fltrt" href="https://yukiyanai.github.io/">English</a>
   </p>
     <!-- end .header --></div>
   <!-- InstanceBeginEditable name="content" -->
