--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -86,7 +86,7 @@
           </li>
         </ul>
 
-        <!--
+        
         <h3>4. データの収集・クリーニング</h3>
         <ul>
           <li>
@@ -100,9 +100,9 @@
           <li>
             <a href="slides/econometrics_slides_05.pdf">講義スライド (PDF)</a>
           </li>
+          <li>このトピックの実習資料はない</li>
         </ul>
 
-        -->
 
         <!--
         <h3>6. 回帰分析による統計的推測 II: 仮説を検証する (1)</h3>
