--- a/jp/classes/info3/contents/index.html
+++ b/jp/classes/info3/contents/index.html
@@ -60,7 +60,7 @@
 
         <h3>2. 学習モデル</h3>
 
-        <h3>3. 最小二乗学習</h3>
+        <h3>3-5. 最小二乗学習</h3>
         <ul>
           <!--<li><a href="slides/info3_lec01.pdf">講義スライド</a></li> -->
           <li>
@@ -73,6 +73,13 @@
             <a href="R/regularized_regression.html"
               >制約付き最小二乗学習（正則化回帰）</a
             >
+          </li>
+        </ul>
+
+        <h3>6. 遅延学習</h3>
+        <ul>
+          <li>
+            <a href="R/kNN.html"><i>k</i>最近傍法</a>
           </li>
         </ul>
 
