--- a/jp/classes/info3/contents/index.html
+++ b/jp/classes/info3/contents/index.html
@@ -83,6 +83,13 @@
           </li>
         </ul>
 
+        <h3>7. 確率的学習</h3>
+        <ul>
+          <li>
+            <a href="R/naiveBayes.html">単純ベイズ分類器</a>
+          </li>
+        </ul>
+
         <h3>課題</h3>
         <ul>
           <li>
