--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -104,24 +104,24 @@
         </ul>
 
 
-        <!--
+        
         <h3>6. 回帰分析による統計的推測 II: 仮説を検証する (1)</h3>
         <ul>
-          <li>
+          <!--<li>
             <a href="slides/econometrics_slides_06.pdf">講義スライド (PDF)</a>
-          </li>
+          </li> -->
           <li>
             <a href="R/regression-estimation.html">回帰分析による統計的推定</a>
-            <a href="R/regression-test-inference.html"
-              >回帰分析による統計的検定と推定</a
-            >
           </li>
           <li>
-            <a href="assignments/econometrics_2020_hw03.html">課題3</a
-            >（<b>提出期限：11月12日の授業開始時</b>）
+            <a href="R/regression-test-inference.html">回帰分析による統計的検定と推論</a>
+          </li>
+          <li>
+            <a href="assignments/econometrics_2021_hw03.html">課題3</a
+            >
           </li>
         </ul>
-        -->
+      
 
         <!--
         <h3>7. 回帰分析の応用 I</h3>
