--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -105,7 +105,7 @@
 
 
         
-        <h3>6. 回帰分析による統計的推測 II: 仮説を検証する (1)</h3>
+        <h3>6. 回帰分析による統計的推測 II: 仮説を検証する</h3>
         <ul>
           <!--<li>
             <a href="slides/econometrics_slides_06.pdf">講義スライド (PDF)</a>
