--- a/jp/classes/info3/contents/index.html
+++ b/jp/classes/info3/contents/index.html
@@ -90,6 +90,13 @@
           </li>
         </ul>
 
+        <h3>8-9. ロジスティック回帰</h3>
+        <ul>
+          <li>
+            <a href="R/logistic_regression1.html">ロジスティック回帰 (1)</a>
+          </li>
+        </ul>
+
         <h3>課題</h3>
         <ul>
           <li>
