--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -122,17 +122,14 @@
           </li>
         </ul>
       
-
-        <!--
-        <h3>7. 回帰分析の応用 I</h3>
+        <h3>7. 回帰分析の応用</h3>
         <ul>
           <li>
             <a href="slides/econometrics_slides_07.pdf">講義スライド (PDF)</a>
           </li>
-          <li><a href="R/multiple-regression.html">回帰分析の応用 (1)</a></li>
-          <li><a href="R/linear-regression.html">回帰分析の応用 (2)</a></li>
+          <li><a href="R/multiple-regression.html">重回帰分析</a></li>
+          <li><a href="R/linear-regression.html">回帰分析の応用</a></li>
         </ul>
-        -->
 
         <!--
         <h3>8. 分析結果を効果的に伝える方法</h3>
