--- a/jp/classes/info3/contents/index.html
+++ b/jp/classes/info3/contents/index.html
@@ -95,6 +95,9 @@
           <li>
             <a href="R/logistic_regression1.html">ロジスティック回帰 (1)</a>
           </li>
+          <li>
+            <a href="R/logistic_regression2.html">ロジスティック回帰 (2)</a>
+          </li>
         </ul>
 
         <h3>課題</h3>
