--- a/jp/classes/info3/contents/index.html
+++ b/jp/classes/info3/contents/index.html
@@ -106,6 +106,10 @@
             <a href="R/info3_2021_hw01.html">課題1</a>（提出期限：10月25日 [月]
             正午）
           </li>
+          <li>
+            <a href="R/info3_2021_hw02.html">課題2</a>（提出期限：11月10日 [水]
+            17時）
+          </li>
         </ul>
 
         <!-- end .content -->
