update metrics1 and info3

--- a/jp/classes/info3/contents/index.html
+++ b/jp/classes/info3/contents/index.html
@@ -100,6 +100,13 @@
           </li>
         </ul>
 
+        <h3>10-11. 分割統治</h3>
+        <ul>
+          <li>
+            <a href="R/decision_tree.html">決定木</a>
+          </li>
+        </ul>
+
         <h3>課題</h3>
         <ul>
           <li>
