--- a/jp/resources/index.html
+++ b/jp/resources/index.html
@@ -35,6 +35,15 @@
     <!-- end .header --></div>
   <!-- InstanceBeginEditable name="content" -->
   <div class="content">
+
+  <h2>第49回衆議院議員総選挙（2021年10月31日実施）の結果</h2>
+    <ul>
+      <li>小選挙区：<a href="data/hr2021_districts.csv">CSVファイル</a></li>
+      <li>比例区（候補者別）：<a href="data/hr2021_pr_candidates.csv">CSVファイル</a></li>
+      <li>比例区（政党別）：<a href="data/hr2021_pr_parties.csv">CSVファイル</a></li>
+      <li><a href="data/hr2021election.html" target="_blank">データに含まれる変数の説明</a></li>
+      <li><p>データの文字コードは UTF-8 です。</p></li>
+ </ul>
   
   <h2>RとRStudioのインストール方法の解説</h2>
     <ul>
