--- a/jp/classes/info3/contents/index.html
+++ b/jp/classes/info3/contents/index.html
@@ -100,10 +100,17 @@
           </li>
         </ul>
 
-        <h3>10-11. 分割統治</h3>
+        <h3>10. 分割統治</h3>
         <ul>
           <li>
             <a href="R/decision_tree.html">決定木</a>
+          </li>
+        </ul>
+
+        <h3>11. 分離統治</h3>
+        <ul>
+          <li>
+            <a href="R/learning_rules.html">分類ルール学習器</a>
           </li>
         </ul>
 
