--- a/jp/classes/info3/contents/index.html
+++ b/jp/classes/info3/contents/index.html
@@ -114,6 +114,13 @@
           </li>
         </ul>
 
+        <h3>12. クラスタリング</h3>
+        <ul>
+          <li>
+            <a href="R/clustering.html">クラスタリング</a>
+          </li>
+        </ul>
+
         <h3>課題</h3>
         <ul>
           <li>
