--- a/jp/classes/info3/contents/index.html
+++ b/jp/classes/info3/contents/index.html
@@ -131,6 +131,10 @@
             <a href="R/info3_2021_hw02.html">課題2</a>（提出期限：11月10日 [水]
             17時）
           </li>
+          <li>
+            <a href="R/info3_2021_hw03.html">課題3</a>（提出期限：11月21日 [日]
+            17時）
+          </li>
         </ul>
 
         <!-- end .content -->
