--- a/jp/classes/info3/contents/index.html
+++ b/jp/classes/info3/contents/index.html
@@ -121,6 +121,13 @@
           </li>
         </ul>
 
+        <h3>13. モデルの性能評価</h3>
+        <ul>
+          <li>
+            <a href="R/evaluating-models.html">モデルの性能評価</a>
+          </li>
+        </ul>
+
         <h3>課題</h3>
         <ul>
           <li>
