--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -148,15 +148,14 @@
           <li><a href="R/interaction.html">交差項の利用</a></li>
         </ul>
 
-        <!--
         <h3>10. 多重比較</h3>
         <ul>
           <li>
             <a href="slides/econometrics_slides_10.pdf">講義スライド (PDF)</a>
           </li>
+          <li><a href="R/multiple-comparison.html">多重比較法</a></li>
         </ul>
-        -->
-
+   
 
         <!--
         <h3>データ可視化発表会</h3>
