--- a/jp/classes/info3/contents/index.html
+++ b/jp/classes/info3/contents/index.html
@@ -128,6 +128,13 @@
           </li>
         </ul>
 
+        <h3>14. モデルの改善</h3>
+        <ul>
+          <li>
+            <a href="R/model-ensemble.html">モデルアンサンブル</a>
+          </li>
+        </ul>
+
         <h3>課題</h3>
         <ul>
           <li>
